# OpenGLPlayground

./: .clang-format  CMakeLists.txt  main.cpp  vcpkg.json
OpenGLLib/: CMakeLists.txt
OpenGLLib/inc/: FragmentShader.h  Shader.h  ShaderProgram.h  VertexShader.h
OpenGLLib/src/: FragmentShader.cpp  Shader.cpp  ShaderProgram.cpp  VertexShader.cpp
OpenGLWrapper/: CMakeLists.txt
OpenGLWrapper/OpenGLCamera/: CMakeLists.txt
OpenGLWrapper/OpenGLCamera/inc/: Camera.h
OpenGLWrapper/OpenGLCamera/src/: Camera.cpp
OpenGLWrapper/OpenGLShader/: CMakeLists.txt
OpenGLWrapper/OpenGLShader/inc/: FragmentShader.h  Shader.h  ShaderProgram.h  VertexShader.h
OpenGLWrapper/OpenGLShader/src/: FragmentShader.cpp  Shader.cpp  ShaderProgram.cpp  VertexShader.cpp
OpenGLWrapper/OpenGLTexture/: CMakeLists.txt
OpenGLWrapper/OpenGLTexture/inc/: ImageFile.h  Texture.h
OpenGLWrapper/OpenGLTexture/src/: ImageFile.cpp  Texture.cpp
OpenGLWrapper/OpenGLWindow/: CMakeLists.txt
OpenGLWrapper/OpenGLWindow/inc/: Keys.h  Window.h
OpenGLWrapper/OpenGLWindow/src/: Window.cpp
Shaders/: FragmentShader.frag
WindowWrapper/: CMakeLists.txt
WindowWrapper/inc/: Window.h
WindowWrapper/src/: Window.cpp
